--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -20,6 +20,24 @@
                 {% endif %}
                 </p>
                 <p>{{post.body}}</p>
+
+                <div class="d-flex flex-row">
+                    <form method="POST" action="{% url 'like' post.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{ request.path }}">
+                        <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                            <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
+                        </button>
+                    </form>
+    
+                    <form method="POST" action="{% url 'dislike' post.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="{{ request.path }}">
+                        <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                            <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
+                        </button>
+                    </form>
+            </div>
     
             </div>
         </div>
@@ -36,12 +54,14 @@
             </div>
         </div>
     </div>
+
     {% for comment in comments %}
     <div class="row justify-content-center mt-3 mb-5 ">
         <div class = "col-md-5 col-sm-12 border-bottom">
-            <p><strong>{{comment.author}}</strong>{{comment.created_on}}
+            <p>
+                <strong>{{comment.author}}</strong>{{comment.created_on}}
                 {% if request.user == comment.author %}
-                <a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>  
+                    <a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>  
                 {% endif %}
             </p>
             <p>{{comment.comment}}</p>
