--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -59,7 +59,7 @@
     <div class="row justify-content-center mt-3 mb-5 ">
         <div class = "col-md-5 col-sm-12 border-bottom">
             <p>
-                <strong>{{comment.author}}</strong>{{comment.created_on}}
+                <a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}"><strong>@{{comment.author}}</strong></a>{{comment.created_on}}
                 {% if request.user == comment.author %}
                     <a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>  
                 {% endif %}
