--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,6 +22,7 @@
         'opsz' 48
       }
       </style>
+      <link href="{% static 'style.css' %} rel="stylesheet">
 
     <title>Social Network</title>
   </head>
