--- a/landing/templates/landing/base.html
+++ b/landing/templates/landing/base.html
@@ -22,7 +22,7 @@
         'opsz' 48
       }
       </style>
-      <link href="{% static 'style.css' %} rel="stylesheet">
+      <link href="{% static 'style.css' %}" rel="stylesheet">
 
     <title>Social Network</title>
   </head>
