--- a/social/templates/social/search.html
+++ b/social/templates/social/search.html
@@ -10,7 +10,7 @@
     {% for profile in profile_list %}
         <div class="row justify-content-center mt-3">
             <div class="col-md-5 com-sm-12 border-bottom position-relative">
-                <p><a style="text-decoration:none;" class="text-primary" href="{% url 'profile' profile.pk %}">@{{profile.user}}</a></p>
+                <p><a class="post-link" href="{% url 'profile' profile.pk %}">@{{profile.user}}</a></p>
                 {% if profile.location %}
                     <p> {{profile.location}}</P>
                 {% endif %}
