--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -15,8 +15,8 @@
                 <p>
                     <strong>{{post.author}}</strong>{{ post.created_on}}
                 {% if request.user == post.author %}
-                <a href="{% url 'post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
-                <a href="{% url 'post-delete' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>  
+                <a href="{% url 'post-edit' post.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
+                <a href="{% url 'post-delete' post.pk %}" class="edir-color"><i class="fas fa-trash"></i></a>  
                 {% endif %}
                 </p>
                 <p>{{post.body}}</p>
@@ -25,7 +25,7 @@
                     <form method="POST" action="{% url 'like' post.pk %}">
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
-                        <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <button class="remove-default-btn" type="submit">
                             <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
                         </button>
                     </form>
@@ -33,7 +33,7 @@
                     <form method="POST" action="{% url 'dislike' post.pk %}">
                         {% csrf_token %}
                         <input type="hidden" name="next" value="{{ request.path }}">
-                        <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
+                        <button class="remove-default-btn" type="submit">
                             <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
                         </button>
                     </form>
@@ -61,7 +61,7 @@
             <p>
                 <a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}"><strong>@{{comment.author}}</strong></a>{{comment.created_on}}
                 {% if request.user == comment.author %}
-                    <a href="{% url 'comment-delete' post.pk comment.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>  
+                    <a href="{% url 'comment-delete' post.pk comment.pk %}" class="edit-color"><i class="fas fa-trash"></i></a>  
                 {% endif %}
             </p>
             <p>{{comment.comment}}</p>
