--- a/social/templates/social/comment_delete.html
+++ b/social/templates/social/comment_delete.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row  mt-5">
         <div class = "col-md-5 col-sm-6 ">
-            <a href="{% url 'post-detail' object.pk %}" class = "btn btm-dark">Back to post</a>
+            <a href="{% url 'post-detail' object.post.pk %}" class = "btn btm-dark">Back to post</a>
         </div>
     </div>
 
