--- a/social/templates/social/post_detail.html
+++ b/social/templates/social/post_detail.html
@@ -12,13 +12,18 @@
     
         <div class="row justify-content-center mt-3">
             <div class = "col-md-5 col-sm-12 border-bottom">
-                <p>
-                    <strong>{{post.author}}</strong>{{ post.created_on}}
+                    <div>
+                        <a href={% url 'profile' post.author.profile.pk %}>
+                        <img class="rounded-circle post-img" height="30" width="30" src="{{post.author.profile.picture.url}}"/>
+                        </a>
+                        <p class="post-text">
+                            <a  class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                        </p>
+                    </div>
                 {% if request.user == post.author %}
                 <a href="{% url 'post-edit' post.pk %}" class="edit-color"><i class="far fa-edit"></i></a>
                 <a href="{% url 'post-delete' post.pk %}" class="edir-color"><i class="fas fa-trash"></i></a>  
                 {% endif %}
-                </p>
                 <p>{{post.body}}</p>
 
                 <div class="d-flex flex-row">
@@ -58,12 +63,18 @@
     {% for comment in comments %}
     <div class="row justify-content-center mt-3 mb-5 ">
         <div class = "col-md-5 col-sm-12 border-bottom">
-            <p>
-                <a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}"><strong>@{{comment.author}}</strong></a>{{comment.created_on}}
+                <a style="text-decoration: none" class="text-primary" href="{% url 'profile' post.author.profile.pk %}">
+                    <div>
+                        <a href={% url 'profile' comment.author.profile.pk %}>
+                        <img class="rounded-circle post-img" height="30" width="30" src="{{comment.author.profile.picture.url}}"/>
+                        </a>
+                        <p class="post-text">
+                            <a  class="text-primary post-link" href="{% url 'profile' comment.author.profile.pk %}">@{{ comment.author }}</a> {{ post.created_on }}
+                        </p>
+                    </div>
                 {% if request.user == comment.author %}
                     <a href="{% url 'comment-delete' post.pk comment.pk %}" class="edit-color"><i class="fas fa-trash"></i></a>  
                 {% endif %}
-            </p>
             <p>{{comment.comment}}</p>
         </div>
     </div>
