--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -11,6 +11,8 @@
 
     <div class="row justify-content-center mt-5">
         <div class = "card shadow-sm col-md-8 px-5 pt-3 col-sm-12 border-bottom">
+            <div class="text-center">
+
             <img src="{{profile.picture.url}}" class="rounded-circle" width="100" height="100"/>
             {% if profile.name %}
             <h3 class="py-4">{{profile.name}}
@@ -32,6 +34,7 @@
                  </h3>
                 {% endif %}
             </h3>
+        </div>
             
             {% if profile.location %}
             <p>{{profile.location}}</p>
@@ -43,7 +46,7 @@
             <p>{{profile.bio}}</p>
             {% endif %}
             <div class="mb-3">
-                <p>Followers: {{number_of_followers}}</p>
+                <a href="{% url 'list-followers' profile.pk%}" class="post-link">Followers: {{number_of_followers}}</a>
                 {% if user == request.user %}
                 {% else %}
                 {% if is_following %}
@@ -68,7 +71,14 @@
     {%for post in posts%}
     <div class="row justify-content-center mt-5">
         <div class = "col-md-8 col-sm-12 border-bottom ">
-            <p><a class="post-link" href="{% url 'profile' post.author.profile.pk %}">@{{post.author}}</a> {{ post.created_on}}</p>
+            <div>
+                <a href={% url 'profile' post.author.profile.pk %}>
+                <img class="rounded-circle post-img" height="30" width="30" src="{{post.author.profile.picture.url}}"/>
+                </a>
+                <p class="post-text">
+                    <a  class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
+                </p>
+            </div>
             <div class="position-relative"
             <p>{{post.body}}</p>
             <a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
