--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -36,12 +36,7 @@
             </h3>
         </div>
             
-            {% if profile.location %}
-            <p>{{profile.location}}</p>
-            {% endif %}
-            {% if profile.birth_date %}
-            <p>{{profile.birth_date}}</p>
-            {% endif %}
+            
             {% if profile.bio %}
             <p>{{profile.bio}}</p>
             {% endif %}
@@ -65,8 +60,32 @@
         </div>
         
     </div>
+    <div class="row justify-content-center mt-5">
+        <div class = "card shadow-sm col-md-8 px-5 py-3 col-sm-12 border-bottom">
+            {% if profile.location %}
+            <p>Location: {{profile.location}}</p>
+            {% endif %}
+            {% if profile.birth_date %}
+            <p>Birthday: {{profile.birth_date}}</p>
+            {% endif %}
 
-
+            
+                {% if user == request.user %}
+                {% else %}
+                {% if is_following %}
+                <form method="POST" action="{% url 'remove-follower' profile.pk %}">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-danger" type="submit">Unfollow</button>
+                </form>
+                {% else %}
+                <form method="POST" action="{% url 'add-follower' profile.pk %}">
+                    {% csrf_token %}
+                    <button class="btn btn-outline-success" type="submit">Follow</button>
+                </form>
+                {% endif %}
+                {% endif %}
+        </div>
+    </div>
 
     {%for post in posts%}
     <div class="row justify-content-center mt-5">
