--- a/social/templates/social/profile.html
+++ b/social/templates/social/profile.html
@@ -98,7 +98,10 @@
                     <a  class="text-primary post-link" href="{% url 'profile' post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
                 </p>
             </div>
-            <div class="position-relative"
+            <div class="position-relative">
+                {% if post.image %}
+                <img src="{{post.image.url}}" class="post-image"/>
+                {% endif %}
             <p>{{post.body}}</p>
             <a href="{% url 'post-detail' post.pk %}" class="stretched-link"></a>
         </div>
