--- a/static/style.css
+++ b/static/style.css
@@ -20,3 +20,11 @@
 	float: left;
 	margin-right: 1rem;
 }
+.post-image {
+	max-width: 100%;
+	height: auto;
+	border-radius: 10px ;
+	margin-bottom: 10px;
+
+
+}
